[FIX] web_editor: clear format button always visible
This commit makes the clear button of the toolbar always visible
even if no style is applied.

Since the display is controlled by the css, we removed the concerned
style.

Task-3459819

--- a/addons/web_editor/static/src/scss/wysiwyg.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg.scss
@@ -335,9 +335,6 @@ $o-we-toolbar-color-clickable-active: $o-we-bg-darkest;
     // Specific elements
     #decoration {
         #removeFormat {
-            display: none;
-        }
-        .active ~ #removeFormat {
             display: flex;
         }
     }
